cvs-current
	o added -S (set limitlen)

v1.40.1
	o MacOS X support
	o ISDN (SLL) support
	o OpenBSD tun device support
	o updated configure.in to support specifying pcap directory 
	o updated config.sub and config.guess
	o added scripts/multi.pl, parallel ngrep perl script
	o very minor change to documentation

v1.40
	o license change, amends the BSD advertising clause
	o fixed bug from not considering caplen in payload length
	  calculations
	o added -s (set bpf caplen)
	o fixed header include for linux glibc 2.2 (time.h wasn't
	  being included)

v1.39.2
	o typographical error, -p works now

v1.39.1	
	o added in AIX includes
	o added BSD* includes for display updates
	o added -p (don't go into promiscuous mode)

v1.39
	o in standard match mode, the display now updates when window
	  sizes change
	o configure now gives the user the option to compile with the
	  pcre library, which is more license-friendly (albeit slower)   
	o fixed minor bug in date printing with -t
        o added configure option '--without-restart', which will
	  remove the pcap restart API call.  Newer versions of libpcap
	  don't need it, and on certain platforms the API call
	  segfaults. 
        o win32: compiled with winpcap's pcap.h, which apparently
	  breaks the pcap standard and introduces its own data link
	  layer types.  fixes the 'unsupported interface' error folks
	  sometimes got when used with a 100bT adapter

v1.38
	o binary matching
	o windows compilation support
	o 64-bit clean patch to regex.c
	o dump and replay pcap_dump files
	o officially licensed under the BSD license
	o normal and diff/delta timestamps

v1.37  
        o added FDDI support

v1.36
	o added -l (line buffer stdout)
	o a few optimizations were made to shave off some cpu cycles
	  spent on processing each packet 
	o fixed bug where the blank regex algorithm wasn't even being
	  used 
	o fixed bug in blank regex algorithm that was preventing '-n'
	  from working
        o change to compile on LinuxPPC