@@ -1,7 +1,7 @@
 
 Program: ngrep 
 Author: Jordan Ritter <jpr5@darkridge.com>
-Version: 1.40.1-cvs (6.14.2002)
+Version: 1.41-cvs (1.21.2003)
 
 
 Goal: 
